update localization for "Vận hành", "Thiết lập"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
   "big_courses": "Big courses",
   "free_courses": "Free courses",
   "paid_courses": "Paid courses",
-  "member_courses": "Member courses",
+  "membership_courses": "Member courses",
   "partner_courses": "Partner courses",
   "tutor_courses": "Tutor courses",
   "staff_productivity": "Staff productivity",
@@ -15,57 +15,102 @@
   "sales": "Sales",
   "operation": "Operation",
   "e_learners": "E-learners",
+  "learners": "Learners",
   "bystanding": "Bystanding",
   "waiting": "Waiting",
   "taking_care": "Taking care",
   "join_course": "Join course",
   "learning": "Learning",
   "check_in": "Check-in",
-  "sessions": "Sessions",
+  "lessons": "Lessons",
   "check_in_list": "Check-in list",
   "accounting": "Accounting",
   "payment_verification": "Payment verification",
   "refund_requests": "Refund requests",
-  "payment_history": "Payment history",
+  "transaction_history": "Transaction history",
   "withdraw_requests": "Withdraw requests",
   "membership": "Membership",
+  "studying": "Studying",
+  "student_appreciations": "Student appreciations",
+  "student_appreciation_list": "Student appreciations",
+  "website_setting": "Website setting",
   "upgrade_requests": "Upgrade requests",
+  "upgrade_request_list": "Upgrade requests",
+  "contact_request_list": "Contact requests",
+  "website_setting_list": "Website settings",
   "contact_requests": "Contact requests",
   "email_logs": "Email logs",
   "staff": "Staff",
-  "permission_management": "Permission management",
+  "joined_course": "Joined course",
+  "permission_management": "Permissions",
+  "forum": "Forum",
+  "community_categories": "Community categories",
   "settings": "Settings",
   "organizations": "Organizations",
   "payment_method": "Payment method",
+  "payment_method_list": "Payment methods",
+  "payment_methods": "Payment methods",
   "features": "Features",
-  "permission_group": "Permission group",
+  "permission_group_list": "Permission groups",
   "role": "Role",
   "point_contest": "Point contest",
   "learner_appreciation": "Learner appreciation",
   "website_settings": "Website settings",
   "pages": "Pages",
+  "posting_category": "Posting category",
+  "testimonial": "Testimonial",
+  "registration_form": "Registration form",
+  "introduction_video": "Introduction video",
   "menu_settings": "Menu settings",
   "footer_settings": "Footer settings",
   "news": "News",
   "posting_categories": "Posting categories",
+  "posting_category_list": "Posting categories",
   "posts": "Posts",
   "edu_events": "Edu events",
+  "edu_event_list": "Edu events",
   "testimonials": "Testimonials",
+  "testimonial_list": "Testimonials",
+  "back": "Back",
+  "teacher": "Teacher",
+  "event": "Event",
   "courses": "Courses",
   "classes": "Classes",
+  "class_list": "Classes",
+  "class": "Class",
+  "edit": "Edit",
+  "assign": "Assign",
+  "zoom_id": "ID of Zoom room",
+  "zoom_password": "Password of Zoom room",
+  "learning_ticket_list": "Learning tickets",
   "learning_tickets": "Learning tickets",
   "registration_forms": "Registration forms",
   "course_list": "Course list",
   "course_categories": "Course categories",
+  "course_category_list": "Course categories",
+  "max_activated_courses": "Maximum activated courses",
+  "direct_referral": "Direct referral",
+  "indirect_referral": "Indirect referral",
+  "add_content": "Add content",
+  "perk": "Perk",
+  "perk_group": "Perk group",
+  "add": "Add",
   "introduction_videos": "Introduction videos",
   "membership_tier": "Membership tier",
-  "notification_email": "Notification email",
+  "publication": "Publication",
+  "notification_email_list": "Notification email",
   "publications": "Publications",
   "products": "Products",
   "product_list": "Product list",
-  "warehouses": "Warehouses",
+  "warehouse_list": "Warehouses",
+  "e_learning": "E-learning",
   "customer_service": "Customer service",
   "customers": "Customers",
+  "customer_list": "Customers",
+  "customer": "Customer",
+  "report": "Report",
+  "user_info": "User's information",
+  "logout": "Logout",
   "ads_orders": "Ads orders",
   "user_profile": "User profile",
   "funnel_course_reports": "Funnel course reports",
@@ -85,7 +130,7 @@
   "learning_e_learners": "Learning e-learners",
   "payment_verifications": "Payment verifications",
   "staffs": "Staffs",
-  "permission_groups": "Permission Groups",
+  "permission_groups": "Permission groups",
   "log_out": "Log out",
   "search_by_time": "Search by time",
   "by_date": "By date",
@@ -116,6 +161,7 @@
   "learner_count_90": "90% learner count",
   "learner_count_100": "100% learner count",
   "total": "Total",
+  "position": "Position",
   "deposit_count": "Deposit count",
   "fully_paid_count": "Fully-paid count",
   "course_revenue": "Course revenue",
@@ -142,6 +188,7 @@
   "learner_code": "Learner code",
   "landing_page": "Landing page",
   "organization": "Organization",
+  "organization_list": "Organizations",
   "send": "Send",
   "export_to_excel": "Export to Excel",
   "refresh": "Refresh",
@@ -160,8 +207,8 @@
   "update_payment": "Update payment",
   "check_in_url": "Check-in link",
   "check_in_time": "Check-in time",
-  "session": "Session",
-  "session_name": "Session name",
+  "lesson": "Lesson",
+  "lesson_name": "Lesson name",
   "opening_class": "Opening class",
   "order_code": "Order code",
   "view_proof_of_payment": "View payment bill",
@@ -211,6 +258,8 @@
   "permission_group_name": "Permission group name",
   "description": "Description",
   "point_contests": "Point contests",
+  "point_contest_list": "Point contests",
+  "contest": "Contest",
   "contest_name": "Contest name",
   "course_code": "Course code",
   "attendance_time": "Attendance Time",
@@ -220,6 +269,12 @@
   "created_date": "Created date",
   "display_name": "Display name",
   "page_url": "Page URL",
+  "internal": "Internal",
+  "external": "External",
+  "disabled": "Disabled",
+  "activated": "Activated",
+  "max_200_chars": "Max 200 characters",
+  "max_500_chars": "Max 500 characters",
   "parent_link": "Parent link",
   "showing": "Showing",
   "column_name": "Column name",
@@ -276,7 +331,7 @@
   "view_testimonial_details": "View testimonial details",
   "view_testimonials": "View testimonials",
   "remove_testimonial": "Remove testimonial",
-  "add_new_post": "Add new post",
+  "post": "Post",
   "edit_post": "Edit post",
   "view_post_details": "View post details",
   "view_posts": "View posts",
@@ -328,11 +383,12 @@
   "remove_class": "Remove class",
   "view_classes": "View classes",
   "view_class_details": "View class details",
-  "add_new_check_in_session": "Add new check-in session",
-  "edit_check_in_session": "Edit check-in session",
-  "remove_check_in_session": "Remove check-in session",
-  "view_check_in_sessions": "View check-in sessions",
-  "view_check_in_session_details": "View check-in session details",
+  "caring": "Caring",
+  "add_new_check_in_lesson": "Add new check-in lesson",
+  "edit_check_in_lesson": "Edit check-in lesson",
+  "remove_check_in_lesson": "Remove check-in lesson",
+  "view_check_in_lessons": "View check-in lessons",
+  "view_check_in_lesson_details": "View check-in lesson details",
   "smtp_management": "SMTP management",
   "smtp_email_list": "SMTP email list",
   "add_new_email_smtp": "Add new email SMTP",
@@ -397,13 +453,16 @@
   "bank_transfer": "Bank transfer",
   "qr_code": "QR Code",
   "data_process_type": "Data process type",
-  "domain_of_e_learning_website": "Domain of E-learning website",
-  "domain_of_admin_panel": "Domain of admin panel",
-  "domain_of_forum": "Domain of forum",
-  "domain_of_homepage": "Domain of homepage",
   "address": "Address",
   "embed_map": "Embed map",
   "deny": "Deny",
+  "acp_domain": "Admin control panel domain",
+  "upload_new_image": "Upload new image",
+  "upload": "Upload",
+  "forum_domain": "Forum domain",
+  "homepage_domain": "Homepage domain",
+  "auto": "Auto",
+  "manual": "Manual",
   "you_need_to_select_at_least_1_item": "You need to select at least 1 item",
   "view_details": "View details",
   "total_tuition": "Total tuition",
@@ -423,6 +482,23 @@
   "verifier": "Verifier",
   "star_rating": "Star rating",
   "save": "Save",
+  "cannot_blank": "cannot be blank",
+  "invalid_format":"is invalid format",
+  "example": "Example",
+  "the_north": "The North",
+  "the_central": "The Central",
+  "the_south": "The South",
+  "sent_date": "Sent date",
+  "missed_call_1st": "Missed at 1st call",
+  "missed_call_2nd": "Missed at 2nd call",
+  "wrong_phone_number": "Wrong phone number",
+  "zalo_blocked_by_customer": "Customer blocked on Zalo",
+  "zalo_messages_sent": "Sent messages on Zalo",
+  "no_demands": "No demands",
+  "transfer_pending": "Transfer pending",
+  "call_blocked_by_customer": "Customer blocked calling",
+  "e_learning_domain":"E-leaning domaindomain_of_e_learning_website",
+  "modify": "Modify",
   "edit_staff": "Edit staff",
   "permissions_of_organization": "Permissions of organization",
   "recurring_withdrawal_period": "Recurring withdrawal period",
@@ -450,16 +526,21 @@
   "edit_website_page": "Edit website page",
   "edit_menu_item": "Edit menu item",
   "edit_footer_item": "Edit footer item",
+  "page": "Page",
   "tutor": "Tutor",
+  "homepage": "Homepage",
+  "normal_page":"Normal page",
+  "enter": "Enter",
+  "category": "Category",
   "course_type": "Course type",
   "registration_point": "Registration point",
   "direct_referral_points": "Direct referral points",
   "indirect_referral_points": "Indirect referral points",
-  "referral_1_rule": "Referral 1 rule",
-  "referral_2_rule": "Referral 2 rule",
-  "add_new_session": "Add new session",
-  "maximum_absences": "Maximum absences",
+  "program_rule": "Program rule",
+  "add_new_lesson": "Add new lesson",
+  "max_absences": "Maximum absences",
   "zoom_link": "Zoom Link",
+  "course": "Course",
   "assign_class": "Assign class",
   "landing_page_code": "Landing page code",
   "landing_page_name": "Landing page name",
@@ -468,11 +549,15 @@
   "seo_keywords": "SEO keywords",
   "seo_image": "SEO image",
   "seo_description": "SEO Description",
+  "link_on_menu": "Link on menu",
   "assign_form": "Assign form",
   "pick_a_class": "Pick a class",
   "confirm": "Confirm",
   "pick_a_form": "Pick a form",
   "unassign_class": "Unassign class",
+  "ticket": "Ticket",
+  "unassign": "Unassign",
+  "e_learning_course": "E-learning course",
   "unassign_form": "Unassign form",
   "ticket_name": "Ticket name",
   "ticket_price": "Ticket price",
@@ -482,8 +567,8 @@
   "unassign_learning_ticket": "Unassign learning ticket",
   "pick_a_learning_ticket": "Pick a learning ticket",
   "select_learning_ticket": "Select learning ticket",
-  "zalo_group_slug": "Zalo group path/slug",
-  "redirect_slug": "Redirect path/slug",
+  "zalo_group_link": "Zalo group link",
+  "redirect_link": "Redirect link",
   "thank_you_page_content": "\"Thank You\" page content",
   "collected_information": "Collected information",
   "required": "Required",
@@ -501,7 +586,7 @@
   "certificate": "Certificate",
   "introduction_video_link": "Introduction video link",
   "banner": "Banner",
-  "icon": "Icon",
+  "category_icon": "Category icon",
   "video_thumbnail": "Video thumbnail",
   "video_link": "Video link",
   "badge": "Badge",
@@ -528,8 +613,14 @@
   "show_price_in_3_months": "Show price in 3 months",
   "show_price_in_1_year": "Show price in 1 year",
   "show_price_in_lifetime": "Show price in lifetime",
-  "maximum_inactivity_days": "Maximum inactivity days",
+  "max_inactivity_days": "Maximum inactivity days",
   "commission_method": "Commission method",
+  "port": "Port",
+  "pick": "Pick",
+  "publication_name": "Publication name",
+  "frame": "Frame",
+  "background": "Background",
+  "publication_code": "Publication code",
   "upgrade_package_discount": "Upgrade package discount",
   "undiscount": "Undiscount",
   "has_discount": "Has discount",
@@ -550,8 +641,8 @@
   "edit_product": "Edit product",
   "edit_warehouse": "Edit warehouse",
   "caring_by": "Caring by",
-  "check_in_session": "Check-in session",
-  "ongoing_session": "Ongoing session",
+  "check_in_lesson": "Check-in lesson",
+  "ongoing_lesson": "Ongoing lesson",
   "check_in_count": "Check-in count",
   "gift_membership": "Gift membership",
   "gift_course": "Gift course",
@@ -589,5 +680,6 @@
   "ads_content_link": "Ads content link",
   "running_platform": "Running platform",
   "customer_phone": "Customer phone",
-  "executing_staff": "Executing staff"
+  "executing_staff": "Executing staff",
+  "ads_order": "Ads order"
 }
