--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -7,69 +7,101 @@
   "big_courses": "Khóa học lớn",
   "free_courses": "Khóa học miễn phí",
   "paid_courses": "Khóa học trả phí",
-  "member_courses": "Khóa học thành viên",
+  "membership_courses": "Khóa học thành viên",
   "partner_courses": "Khóa học cộng tác viên",
   "tutor_courses": "Khóa học giảng viên",
   "staff_productivity": "Hiệu quả nhân sự",
   "teachers": "Diễn giả",
+  "teacher": "Diễn giả",
   "sales": "Nhân viên sales",
   "operation": "Vận hành",
-  "e_learners": "Học viên",
+  "learners": "Học viên",
   "bystanding": "Chưa chia",
   "waiting": "Đang chờ",
   "taking_care": "Đang chăm",
   "join_course": "Đăng ký khóa học",
   "learning": "Đang học",
   "check_in": "Điểm danh",
-  "sessions": "Danh sách buổi học",
+  "lessons": "Buổi học",
+  "lesson_list": "Danh sách buổi học",
   "check_in_list": "Danh sách điểm danh",
   "accounting": "Nghiệp vụ kế toán",
   "payment_verification": "Xác thực thanh toán",
   "refund_requests": "Yêu cầu hoàn tiền",
-  "payment_history": "Lịch sử thanh toán",
+  "transaction_history": "Lịch sử thanh toán",
   "withdraw_requests": "Danh sách yêu cầu rút tiền",
   "paid_at": "Ngày thanh toán",
   "membership": "Tư cách thành viên",
-  "upgrade_requests": "Danh sách yêu cầu nâng hạng",
-  "contact_requests": "Danh sách Yêu cầu liên hệ",
+  "upgrade_requests": "Yêu cầu nâng hạng",
+  "upgrade_request_list": "Danh sách yêu cầu nâng hạng",
+  "contact_request_list": "Danh sách yêu cầu liên hệ",
+  "contact_requests": "Yêu cầu liên hệ",
   "email_logs": "Nhật ký gửi mail",
   "staff": "Nhân sự",
   "permission_management": "Trao quyền",
   "settings": "Thiết lập",
   "organizations": "Tổ chức",
-  "payment_method": "Phương thức thanh toán",
+  "payment_method_list": "Danh sách phương thức thanh toán",
   "features": "Tính năng",
   "permission_group": "Nhóm quyền",
   "role": "Vai trò",
+  "student_appreciations": "Tri ân học viên",
+  "student_appreciation_list": "Tri ân học viên",
   "point_contest": "Cuộc thi tính điểm",
   "learner_appreciation": "Tri ân học viên",
-  "website_settings": "Danh sách cấu hình website",
+  "website_settings": "Cấu hình website",
+  "website_setting": "Cấu hình website",
+  "website_setting_list": "Danh sách cấu hình website",
   "pages": "Danh sách trang",
   "menu_links": "Danh sách đường dẫn thanh menu",
   "menu_settings": "Cấu hình thanh menu",
   "footer_settings": "Cấu hình chân trang",
-  "news": "Tin tức hoạt động",
+  "news": "Tin tức",
   "posting_categories": "Danh mục tin tức",
+  "posting_category_list": "Danh sách danh mục tin tức",
   "posts": "Danh sách tin tức",
-  "edu_events": "Danh sách sự kiện giáo dục",
-  "testimonials": "Danh sách lời chứng thực",
+  "edu_events": "Sự kiện giáo dục",
+  "edu_event": "Sự kiện giáo dục",
+  "edu_event_list": "Danh sách sự kiện giáo dục",
+  "testimonials": "Lời chứng thực",
+  "testimonial": "Lời chứng thực",
+  "testimonial_list": "Danh sách lời chứng thực",
+  "back": "Quay lại",
   "courses": "Khóa học",
-  "classes": "Danh sách lớp học",
+  "classes": "Lớp học",
+  "class_list": "Danh sách lớp học",
   "class": "Lớp học",
-  "learning_tickets": "Danh sách vé khóa học",
+  "learning_ticket_list": "Danh sách vé khóa học",
   "registration_forms": "Danh sách form đăng ký",
+  "registration_form": "Form đăng ký",
   "course_list": "Danh sách khóa học",
-  "course_categories": "Danh sách danh mục khóa học",
+  "course_category_list": "Danh sách danh mục khóa học",
+  "course_categories": "Danh mục khoá học",
   "introduction_videos": "Danh sách video giới thiệu",
+  "introduction_video": "Video giờ thiệu",
   "membership_tier": "Hạng thành viên",
   "notification_email": "Email thông báo",
-  "publications": "Danh sách ấn phẩm",
+  "publication_list": "Danh sách ấn phẩm",
+  "publications": "Ấn phẩm",
+  "publication": "Ấn phẩm",
   "products": "Sản phẩm",
   "product_list": "Danh sách sản phẩm",
-  "warehouses": "Danh sách kho hàng",
+  "warehouse_list": "Danh sách kho hàng",
   "customer_service": "Dịch vụ khách hàng",
-  "customers": "Danh sách khách hàng",
+  "customer_list": "Danh sách khách hàng",
+  "organization_list": "Danh sách tổ chức",
+  "customer": "Khách hàng",
+  "customers": "Khách hàng",
+  "report": "Báo cáo",
+  "user_info": "Thông tin người dùng",
+  "logout": "Đăng xuất",
   "ads_orders": "Danh sách đơn chạy Ads",
+  "ads_order": "Đơn chạy Ads",
+  "modify": "Chỉnh sửa",
+  "cannot_blank": "không được để trống",
+  "example": "Ví dụ",
+  "invalid_format": "Không đúng định dạng",
+  "e_learning": "E-learning",
   "user_profile": "Thông tin user",
   "funnel_course_reports": "Báo cáo khóa học phễu",
   "free_course_reports": "Báo cáo khóa học miễn phí",
@@ -79,16 +111,21 @@
   "tutor_course_reports": "Báo cáo khóa học giảng viên",
   "bystanding_learners": "Danh sách học viên chưa chia",
   "waiting_learners": "Danh sách học viên đang chờ",
+  "caring": "Đang chăm sóc",
+  "studying": "Đang học",
+  "partner": "Đối tác",
   "caring_learners": "Danh sách học viên đang chăm sóc",
   "learning_learners": "Danh sách học viên đang học",
   "bystanding_e_learners": "Danh sách học viên e-learning chưa chia",
   "waiting_e_learners": "Danh sách học viên e-learning đang chờ",
   "caring_e_learners": "Danh sách học viên e-learning đang chăm",
   "registered_e_learners": "Danh sách học viên e-learning đăng ký khoá học",
+  "joined_course": "Đã đăng ký",
   "learning_e_learners": "Danh sách học viên e-learning đang học",
   "proof_of_payment_list": "Danh sách xác thực thanh toán",
   "staffs": "Danh sách nhân viên",
-  "permission_groups": "Danh sách nhóm quyền",
+  "permission_groups": "Nhóm quyền",
+  "permission_group_list": "Danh sách nhóm quyền",
   "log_out": "Đăng xuất",
   "search_by_time": "Tìm kiếm theo thời gian",
   "by_date": "Theo ngày",
@@ -105,6 +142,9 @@
   "no": "STT",
   "course_name": "Tên khóa học",
   "class_name": "Tên lớp học",
+  "the_north": "Miền Bắc",
+  "the_central": "Miền Trung",
+  "the_south": "Miền Nam",
   "ads_price": "Số tiền Ads",
   "registration_count": "Số lượt đăng ký",
   "other_costs": "Các chi phí khác",
@@ -119,6 +159,7 @@
   "learner_count_90": "Số người học 90%",
   "learner_count_100": "Số người học 100%",
   "total": "Tổng có",
+  "position": "Vị trí",
   "deposit_count": "Số người đặt cọc",
   "fully_paid_count": "Số người chuyển đủ",
   "course_revenue": "Doanh thu khóa học",
@@ -141,6 +182,8 @@
   "excess_refunded": "Hoàn tiền thừa",
   "status": "Trạng thái",
   "registered": "Đã có tài khoản",
+  "has_account": "Đã có tài khoản",
+  "no_account": "Chưa tài khoản",
   "unregistered": "Chưa có tài khoản",
   "learner_name": "Tên học viên",
   "learner_code": "Mã học viên",
@@ -164,9 +207,9 @@
   "update_payment": "Cập nhật thanh toán",
   "check_in_url": "Link điểm danh",
   "check_in_time": "Khung giờ điểm danh",
-  "session": "Buổi giảng dạy",
-  "ongoing_session": "Buổi đang dạy",
-  "session_name": "Tên buổi học",
+  "lesson": "Buổi học",
+  "ongoing_lesson": "Buổi đang dạy",
+  "lesson_name": "Tên buổi học",
   "opening_class": "Lớp đang mở",
   "order_code": "Mã đơn hàng",
   "view_proof_of_payment": "Xem ảnh thanh toán",
@@ -180,7 +223,7 @@
   "reset": "Cài lại",
   "order_status": "Trạng thái đơn hàng",
   "point": "Thanh toán bằng điểm",
-  "vnpay": "Thanh toán VnPay",
+  "vnpay": "Thanh toán VNPay",
   "banking_online": "Thanh toán ngân hàng",
   "pending": "Chưa giải quyết",
   "complete": "Hoàn thành",
@@ -193,6 +236,12 @@
   "member_email": "Email thành viên",
   "member_package": "Gói thành viên",
   "member_code": "Mã thành viên",
+  "sent_date": "Ngày gửi",
+  "zalo_blocked_by_customer": "Khách hàng chặn Zalo",
+  "zalo_messages_sent": "Đã gửi tin nhắn Zalo",
+  "no_demands": "Không có nhu cầu",
+  "transfer_pending": "Hẹn chuyển khoản",
+  "call_blocked_by_customer": "Khách hàng chặn cuộc gọi",
   "paid_amount": "Số tiền đã thanh toán",
   "referral_phone": "Số điện thoại người giới thiệu",
   "referral_email": "Email người giới thiệu",
@@ -207,15 +256,18 @@
   "receiver": "Người nhận",
   "sent_count": "Số lần gửi",
   "add_new": "Thêm mới",
+  "add": "Thêm",
   "staff_name": "Tên nhân viên",
   "organization_name": "Tên tổ chức",
   "admin": "Người quản trị",
   "withdrawal_settings": "Cấu hình rút tiền",
   "permission": "Phân quyền",
   "remove": "Xoá",
-  "payment_methods": "Danh sách phương thức thanh toán",
+  "payment_methods": "Phương thức thanh toán",
   "permission_group_name": "Tên nhóm quyền",
-  "point_contests": "Danh sách cuộc thi tính điểm",
+  "point_contest_list": "Danh sách cuộc thi tính điểm",
+  "point_contests": "Cuộc thi tính điểm",
+  "contest": "Cuộc thi",
   "contest_name": "Tên chương trình",
   "course_code": "Mã khoá học",
   "cancel": "Huỷ",
@@ -229,12 +281,15 @@
   "parent_link": "Thuộc đường dẫn",
   "showing": "Hiển thị",
   "column_name": "Tên cột",
+  "internal": "Trong hệ thống",
+  "external": "Bên ngoài",
   "add_new_url_footer": "Tạo mới đường dẫn chân trang",
   "add_new_url_on_menu": "Tạo mới đường dẫn trên thanh menu",
+  "link_on_menu": "Đường dẫn trên thanh menu",
   "add_new_page_for_website": "Tạo mới website page",
   "page_type": "Loại trang",
   "page_content": "Nội dung page",
-  "seo_tags": "Thẻ seo",
+  "seo_tags": "Thẻ SEO",
   "add_new_contest": "Tạo mới cuộc thi",
   "pick_permissions": "Danh sách quyền chọn",
   "view_permission_groups": "Xem danh sách nhóm quyền",
@@ -262,6 +317,10 @@
   "export_learners_data": "Xuất dữ liệu học viên",
   "activate_e_learning_courses_for_learners": "Kích hoạt khoá học Elearning cho học viên",
   "activate_course": "Kích hoạt khoá học",
+  "activated": "Kích hoạt",
+  "disabled": "Vô hiệu",
+  "max_200_chars": "Tối đa 200 ký tự",
+  "max_500_chars": "Tối đa 500 ký tự",
   "partner_management": "Quản lý CTV",
   "view_partners": "Xem danh sách CTV",
   "tutor_management": "Quản lý giảng viên",
@@ -283,7 +342,7 @@
   "view_testimonial_details": "Xem chi tiết lời chứng thực",
   "view_testimonials": "Xem danh sách lời chứng thực",
   "remove_testimonial": "Xoá lời chứng thực",
-  "add_new_post": "Tạo mới bài viết",
+  "post": "Bài viết",
   "edit_post": "Cập nhật thông tin bài viết",
   "view_post_details": "Xem chi tiết bài viết",
   "view_posts": "Xem danh sách bài viết",
@@ -335,12 +394,12 @@
   "remove_class": "Xoá lớp",
   "view_classes": "Xem danh sách lớp",
   "view_class_details": "Xem chi tiết lớp",
-  "check_in_session": "Buổi điểm danh",
-  "add_new_check_in_session": "Tạo mới buổi điểm danh",
-  "edit_check_in_session": "Cập nhật buổi điểm danh",
-  "remove_check_in_session": "Xoá buổi điểm danh",
-  "view_check_in_sessions": "Xem danh sách buổi điểm danh",
-  "view_check_in_session_details": "Xem chi tiết buổi điểm danh",
+  "check_in_lesson": "Buổi điểm danh",
+  "add_new_check_in_lesson": "Tạo mới buổi điểm danh",
+  "edit_check_in_lesson": "Cập nhật buổi điểm danh",
+  "remove_check_in_lesson": "Xoá buổi điểm danh",
+  "view_check_in_lessons": "Xem danh sách buổi điểm danh",
+  "view_check_in_lesson_details": "Xem chi tiết buổi điểm danh",
   "smtp_management": "Quản lý Email SMTP",
   "smtp_email_list": "Danh sách Email SMTP",
   "add_new_email_smtp": "Thiết lập mới Email SMTP",
@@ -354,6 +413,10 @@
   "remove_publication": "Xoá ấn phẩm",
   "view_publications": "Danh sách ấn phẩm",
   "edit_publication": "Cập nhật ấn phẩm",
+  "publication_name": "Tên ấn phẩm",
+  "frame": "Khung",
+  "background": "Ảnh nền",
+  "publication_code": "Mã ấn phẩm",
   "view_publication_details": "Chi tiết ấn phẩm",
   "e_learning_category_management": "Quản lý danh mục E-learning",
   "view_e_learning_categories": "Danh sách danh mục E-learning",
@@ -364,6 +427,7 @@
   "e_learning_course_management": "Quản lý khoá học E-learning",
   "view_e_learning_courses": "Danh sách E-learning",
   "add_new_e_learning_course": "Tạo mới E-learning",
+  "e_learning_course": "Khoá học E-learning",
   "view_e_learning_course_details": "Chi tiết E-learning",
   "edit_e_learning_course": "Cập nhật E-learning",
   "remove_e_learning_course": "Xoá E-learning",
@@ -405,14 +469,21 @@
   "bank_transfer": "Chuyển khoản",
   "qr_code": "Mã QR",
   "data_process_type": "Kiểu chia data",
-  "domain_of_e_learning_website": "Tên miền trang E-learning",
-  "domain_of_admin_panel": "Tên miền trang quản trị",
-  "domain_of_forum": "Tên miền trang diễn đàn",
-  "domain_of_homepage": "Tên miền trang chủ",
   "address": "Địa chỉ",
   "embed_map": "Nhúng bản đồ",
   "add_new_organization": "Tạo tổ chức",
   "deny": "Từ chối",
+  "e_learning_domain": "Tên miền trang E-leaning",
+  "acp_domain": "Tên miền trang quản trị",
+  "upload_new_image": "Upload ảnh mới",
+  "upload": "Tải lên",
+  "auto": "Tự động",
+  "manual": "Thủ công",
+  "forum_domain": "Tên miền trang diễn đàn",
+  "homepage_domain": "Tên miền trang chủ",
+  "homepage": "Trang chủ",
+  "normal_page": "Trang bình thường",
+  "enter": "Nhập",
   "you_need_to_select_at_least_1_item": "Chưa có mục nào được chọn",
   "view_details": "Xem chi tiết",
   "total_tuition": "Tổng học phí",
@@ -427,6 +498,7 @@
   "started_at": "Thời gian tổ chức",
   "location": "Địa điểm",
   "event_link": "Đường dẫn đăng ký",
+  "event": "Sự kiện",
   "link": "Liên kết",
   "event_name": "Tên sự kiện",
   "type": "Thể loại",
@@ -455,31 +527,39 @@
   "remove_confirmation": "Xác nhận xóa",
   "are_you_sure_to_delete_selected_items": "Bạn có chắc chắn muốn xoá những mục đã chọn?",
   "edit_contest": "Chỉnh sửa cuộc thi",
-  "copyright_text": "Copy right (Tuyên bố bản quyền)",
+  "copyright_text": "Copyright (Tuyên bố bản quyền)",
   "website_name": "Tên website",
+  "page": "Trang",
   "edit_website_page": "Chỉnh sửa website page",
   "edit_menu_item": "Chỉnh sửa đường dẫn trên thanh menu",
   "edit_footer_item": "Chỉnh sửa đường dẫn chân trang",
   "edit_posting_category": "Chỉnh sửa danh mục tin tức",
   "tutor": "Giáo viên",
+  "category": "Danh mục",
+  "posting_category": "Danh mục tin tức",
   "course_type": "Loại khoá học",
   "registration_point": "Điểm đăng ký",
   "direct_referral_points": "Điểm giới thiệu trực tiếp",
+  "direct_referral": "Giới thiệu trực tiếp",
+  "indirect_referral": "Giới thiệu gián tiếp",
   "indirect_referral_points": "Điểm giới thiệu gián tiếp",
-  "referral_1_rule": "Thể lệ chương trình referral 1",
-  "referral_2_rule": "Thể lệ chương trình referral 2",
-  "add_new_session": "Thêm buổi học",
-  "maximum_absences": "Số buổi nghỉ tối đa",
+  "program_rule": "Thể lệ chương trình",
+  "course": "Khoá học",
+  "add_new_lesson": "Thêm buổi học",
+  "max_absences": "Số buổi nghỉ tối đa",
   "attendance_time": "Khung giờ học",
-  "zoom_link": "Link zoom",
+  "zoom_link": "Link Zoom",
+  "zoom_id": "ID phòng Zoom",
+  "zoom_password": "Mật khẩu phòng Zoom",
   "assign_zoom_link": "Gắn link Zoom",
+  "assign": "Gán",
   "assign_class": "Gắn lớp",
   "landing_page_code": "Mã landing page",
   "landing_page_content": "Trang landing page",
-  "seo_title": "Tiêu đề seo",
-  "seo_keywords": "Từ khoá seo",
-  "seo_image": "Ảnh seo",
-  "seo_description": "Mô tả seo",
+  "seo_title": "Tiêu đề SEO",
+  "seo_keywords": "Từ khoá SEO",
+  "seo_image": "Ảnh SEO",
+  "seo_description": "Mô tả SEO",
   "assign_form": "Gắn form",
   "pick_a_class": "Chọn lớp để gắn",
   "confirm": "Xác nhận",
@@ -489,14 +569,17 @@
   "ticket_name": "Tên vé",
   "ticket_price": "Giá vé",
   "learning_ticket": "Vé khoá học",
+  "learning_tickets": "Vé khoá học",
   "edit_learning_ticket": "Chỉnh sửa vé khoá học",
+  "unassign": "Gỡ",
   "form_name": "Tên form",
+  "ticket": "Vé",
   "assign_learning_ticket": "Gắn vé",
   "unassign_learning_ticket": "Gỡ vé",
   "pick_a_learning_ticket": "Chọn vé để gắn",
   "select_learning_ticket": "Chọn vé",
-  "zalo_group_slug": "Đường dẫn nhóm zalo",
-  "redirect_slug": "Đường dẫn trang chuyển hướng",
+  "zalo_group_link": "Đường dẫn nhóm zalo",
+  "redirect_link": "Đường dẫn trang chuyển hướng",
   "thank_you_page_content": "Nội dung trang thank you",
   "collected_information": "Các thông tin cần thu thập",
   "required": "Bắt buộc",
@@ -505,7 +588,7 @@
   "demand": "Nhu cầu",
   "curriculum": "Chương trình học",
   "resource": "Tài nguyên",
-  "short_description": "Giới thiệu ngắn",
+  "short_description": "Mô tả ngắn",
   "new_price": "Giá mới",
   "old_price": "Giá cũ",
   "minimum_membership_package": "Gói thành viên áp dụng tối thiểu",
@@ -514,8 +597,8 @@
   "certificate": "Chứng chỉ",
   "introduction_video_link": "Link video giới thiệu",
   "banner": "Ảnh banner",
-  "description": "Tổng quan khoá học",
-  "icon": "Icon danh mục",
+  "description": "Mô tả",
+  "category_icon": "Icon danh mục",
   "video_thumbnail": "Ảnh bìa video",
   "video_link": "Đường dẫn video",
   "membership_tiers": "Danh sách hạng thành viên",
@@ -530,6 +613,7 @@
   "optional_course_settings": "Thiết lập khoá học tuỳ chọn",
   "membership_settings": "Cấu hình tư cách thành viên",
   "is_popular": "Phổ biến",
+  "add_content": "Thêm nội dung",
   "tier_price": "Chính sách giá",
   "price_for_1_month": "1 tháng",
   "price_for_3_months": "3 tháng",
@@ -544,7 +628,8 @@
   "show_price_in_3_months": "Hiển thị giá 3 tháng",
   "show_price_in_1_year": "Hiển thị giá 1 năm",
   "show_price_in_lifetime": "Hiển thị giá vĩnh viễn",
-  "maximum_inactivity_days": "Số ngày không hoạt động tối đa",
+  "max_inactivity_days": "Số ngày không hoạt động tối đa",
+  "max_activated_courses": "Số khoá kích hoạt tối đa",
   "commission_method": "Phương thức tính hoa hồng",
   "upgrade_package_discount": "Chiết khấu nâng cấp gói",
   "undiscount": "Không chiết khấu",
@@ -552,8 +637,12 @@
   "by_referrer": "Hoa hồng theo người giới thiệu",
   "by_referred_person": "Hoa hồng theo người được giới thiệu",
   "perks": "Quyền lợi",
+  "perk": "Quyền lợi",
   "add_perk_group": "Thêm nhóm quyền lợi",
+  "port": "Cổng",
+  "pick": "Chọn",
   "your_perks": "Quyền lợi dành cho bạn",
+  "perk_group": "Nhóm quyền lợi",
   "activity": "Hoạt động",
   "owner": "Chủ sở hữu",
   "email_name": "Tên email",
@@ -578,12 +667,17 @@
   "yearly_package": "Gói 1 năm",
   "lifetime_package": "Gói vĩnh viễn",
   "downgrade_policy": "Chính sách hạ cấp",
+  "duration": "Thời lượng",
   "downgrade_duration": "Thời hạn hạ cấp (Ngày)",
   "forum_settings": "Cấu hình diễn đàn",
   "forum_categories": "Danh sách danh mục diễn đàn",
   "forum_communities": "Danh sách cộng đồng",
+  "forum": "Diễn đàn",
+  "community_categories": "Danh sách danh mục cộng đồng",
+  "community_category": "Danh mục cộng đồng",
   "name": "Tên",
-  "notification_emails": "Danh sách email thông báo",
+  "notification_email_list": "Danh sách email thông báo",
+  "notification_emails": "Email thông báo",
   "image": "Ảnh",
   "product_name": "Tên sản phẩm",
   "product_group": "Nhóm sản phẩm",
