add localization related to "Đại lý"

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,8 @@
   "tutor_courses": "Tutor courses",
   "staff_productivity": "Staff productivity",
   "teachers": "Speakers",
+  "agencies": "Agencies",
+  "agency_list": "Agencies",
   "sales": "Sales",
   "operation": "Operation",
   "e_learners": "E-learners",
