--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -12,6 +12,8 @@
   "tutor_courses": "Khóa học giảng viên",
   "staff_productivity": "Hiệu quả nhân sự",
   "teachers": "Diễn giả",
+  "agencies": "Đại lý",
+  "agency_list": "Danh sách đại lý",
   "teacher": "Diễn giả",
   "sales": "Nhân viên sales",
   "operation": "Vận hành",
