remove unecessary field of sidebar array

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -608,7 +608,10 @@
   "price_for_3_months": "3 months",
   "price_for_1_year": "1 year",
   "tier_description": "Tier description",
+  "commission_policy": "Commission policy",
   "commission": "Commission",
+  "commission_rate": "Commission rate",
+  "order_count": "Order count",
   "direct_referral_commission": "Direct referral commission",
   "indirect_referral_commission": "Indirect referral commission",
   "show_price_in_1_month": "Show price in 1 month",
