--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -623,7 +623,10 @@
   "price_for_lifetime": "Vĩnh viễn",
   "lifetime_price": "Giá vĩnh viễn",
   "tier_description": "Nội dung gói",
-  "commission": "Chính sách hoa hồng",
+  "commission_policy": "Chính sách hoa hồng",
+  "commission": "Hoa hồng",
+  "commission_rate": "Mức hoa hồng",
+  "order_count": "Số giao dịch",
   "direct_referral_commission": "Hoa hồng giới thiệu trực tiếp",
   "indirect_referral_commission": "oa hồng giới thiệu gián tiếp",
   "show_price_in_1_month": "Hiển thị giá 1 tháng",
