feature: catalog init

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -686,5 +686,6 @@
   "running_platform": "Running platform",
   "customer_phone": "Customer phone",
   "executing_staff": "Executing staff",
-  "ads_order": "Ads order"
+  "ads_order": "Ads order",
+  "price_list_categories": "Price List Categories"
 }
