--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -701,5 +701,6 @@
   "zalo_messages_sent": "Sent messages on Zalo",
   "zoom_id": "ID of Zoom room",
   "zoom_link": "Zoom Link",
-  "zoom_password": "Password of Zoom room"
+  "zoom_password": "Password of Zoom room",
+  "price_list_categories": "Price list categories"
 }
